...
              ),
              Center(child: loadingIndicator()),
            ],
          ),
          floatingActionButton: FloatingActionButton(
            onPressed: () => Navigator.pushNamed(context, "/new"),
            tooltip: 'Create Auction',
            child: Icon(Icons.add),
          ),
        ),
        distinct: true,
      );
}
...
